<resources>
    <string name="app_name">control</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add Mood</string>
    <string name="title_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="control">Control</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?  </string>
    <string name="sign_up_login">Sign Up</string>
    <string name="date_example">Date Example</string>
    <string name="date">Date</string>
    <string name="mood">Mood</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="anxious">Anxious</string>
    <string name="okay">Okay</string>
    <string name="angry">Angry</string>
    <string name="tired">Tired</string>
    <string name="journal">Journal</string>
    <string name="add_an_optional_journal_entry">Add an optional journal entry</string>
    <string name="chosen_day_title">Chosen Day Title</string>
    <string name="journal_entry">Journal Entry</string>
    <string name="moods">Moods</string>
    <string name="username">username</string>
    <string name="have_an_account">Have an account?</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="confirm_password">confirm password</string>
    <string name="view_mood">View Moods</string>
</resources>